--- a/package.json
+++ b/package.json
@@ -13,11 +13,22 @@
     "@angular/platform-browser-dynamic": "~20.1.0",
     "@angular/router": "~20.1.0",
     "@nestjs/common": "^11.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.6.0",
+    "mongoose": "^8.16.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-oauth2": "^1.8.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.25",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
