--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/platform-express": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.6.0",
+    "csv-parser": "^3.2.0",
     "mongoose": "^8.16.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
