--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@ngrx/effects": "^19.2.1",
+    "@ngrx/entity": "^19.2.1",
+    "@ngrx/store": "^19.2.1",
+    "@ngrx/store-devtools": "^19.2.1",
     "axios": "^1.6.0",
     "csv-parser": "^3.2.0",
     "mongoose": "^8.16.4",
