--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.1.3",
     "@angular/cdk": "^20.1.3",
     "@angular/common": "~20.1.0",
     "@angular/compiler": "~20.1.0",
@@ -25,8 +26,10 @@
     "@ngrx/entity": "^19.2.1",
     "@ngrx/store": "^19.2.1",
     "@ngrx/store-devtools": "^19.2.1",
+    "@swimlane/ngx-charts": "^23.0.0-alpha.0",
     "axios": "^1.6.0",
     "csv-parser": "^3.2.0",
+    "d3": "^7.9.0",
     "mongoose": "^8.16.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
